fixed question div collapsing

--- a/public/stylesheets/sass/mixer2050/_scenarios_new.sass
+++ b/public/stylesheets/sass/mixer2050/_scenarios_new.sass
@@ -5,7 +5,7 @@ body.mixer2050
       margin-right: 8px
       float: left
       section#questions
-        width: auto
+        width: 440px
         @include shell_gradient_layer
         height: 430px
         overflow: auto
